2014-06-19  Bob Halley  <halley@dnspython.org>

    * Escaping of Unicode has been corrected.  Previously we escaped and
      then converted to Unicode, but the right thing to do is convert to
      Unicode, then escape.  Also, characters > 0x7f should NOT be escaped
      in Unicode mode.  Thanks to Martin Basti for the patch.

    * dns.rdtypes.ANY.DNSKEY now has helpers functions to convert between
      the numeric form of the flags and a set of human-friendly strings.
      Thanks to Petr Spacek for the patch.

    * RRSIGs did not respect relativization settings in to_text().  Thanks
      to Brian Smith for reporting the bug and submitting a (slightly different) patch.

2014-06-18  Bob Halley  <halley@dnspython.org>

    * dns/rdtypes/IN/APL.py: The APL from_wire() method did not accept an
      rdata length of 0 as valid.  Thanks to salzmdan for reporting the
      problem.

2014-05-31  Bob Halley  <halley@dnspython.org>

	* dns/ipv6.py: Add is_mapped()

	* dns/reversename.py: Lookup IPv6 mapped IPv4 addresses in the v4
	  reverse namespace.  Thanks to Devin Bayer.  Yes, I finally fixed
	  this one :)

2014-04-11  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Do not put back an unescaped token.  This was
	  causing escape processing for domain names to break.  Thanks to
	  connormclaud for reporting the problem.

2014-04-04  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Making a response didn't work correctly if the
	  query was signed with TSIG and we knew the key.  Thanks to Jeffrey
	  Stiles for reporting the problem.

2013-12-11  Bob Halley  <halley@dnspython.org>

	* dns/query.py: Fix problems with the IXFR state machine which caused
	  long diffs to fail.  Thanks to James Raftery for the fix and the
	  repeated prodding to get it applied :)

2013-09-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.11.1 released)

2013-09-01  Bob Halley  <halley@dnspython.org>

	* dns/tsigkeyring.py (to_text): we want keyname.to_text(), not